syntax = "proto3";

package article;


message Article {
  string id = 1;
  string title = 2;
  string description = 3;

}



message GetArticleRequest {
  string article_id = 1;
}

message GetArticleResponse {
  Article article = 1;
}

message SearchArticlesRequest {
  string query = 1;
}

message SearchArticlesResponse {
  repeated Article articles = 1;
}

message CreateArticleRequest {
  string article_id = 1;
  string title = 2;
  string description = 3;
}

message CreateArticleResponse {
  Article article = 1;
}

service ArticleService {
  rpc GetArticle(GetArticleRequest) returns (GetArticleResponse);
  rpc SearchArticles(SearchArticlesRequest) returns (SearchArticlesResponse);
  rpc CreateArticle(CreateArticleRequest) returns (CreateArticleResponse);
}